--- a/wyyx/public/index.html
+++ b/wyyx/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover" />
-		<meta name="description" content="我的移动端博客">
+		<meta name="description" content="我的移动音乐">
 		<meta name="keywords" content="博客">
 		<meta name="author" content="王宏伟, wyw520byl@163.com">
 		<!-- 关闭电话号码/邮箱地址识别： -->
